--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <header class="d-flex masthead" style="background-image: url(&quot;assets/img/573df318afe61.jpg&quot;);">
         <div class="container my-auto text-center">
             <h1 class="mb-1" style="color: rgb(255,255,255);">tf2bots.ga</h1>
-            <h3 class="mb-5"><em style="color: rgb(255,255,255);">Medic y targeting bots en Shoppy</em></h3><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="https://google.com" style="margin: 10px;background-color: rgb(152,103,160);">Shoppy</a>
+            <h3 class="mb-5"><em style="color: rgb(255,255,255);">Medic y targeting bots en Shoppy</em></h3><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="https://shoppy.gg/@liar" style="margin: 10px;background-color: rgb(152,103,160);">Shoppy</a>
             <a
-                class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="https://yandex.com" style="margin: 10px;margin-left: 10;">Discord</a>
+                class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="https://discord.gg/WQVXKuySXS" style="margin: 10px;margin-left: 10;">Discord</a>
                 <div class="overlay"></div>
         </div>
     </header>
