--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <div>
         <div class="container">
             <div class="row">
+                
+                <h1> Este es nuestro dominio principal, si por alguna razon lo dan de baja, contamos con otros 4 los cuales son los siguientes:</h1>
+                <h3> tf2bots.tk, tf2bots.ml, tf2bots.cf y tf2bots.gq </h3>
+                <h1> por ahora solo utilizaremos este pero para actualizanciones o cualquier cosa entrar al discord </h1>
+                
                 <div class="col-md-12"><small>hice esta pagina en 10 mins xq me da flogera no juzgen</small></div>
             </div>
         </div>
